Prova de Chimpa

--- a/index.html
+++ b/index.html
@@ -138,6 +138,78 @@
 
 </section>
 
+<section id="blog">
+  <div class="titulo2">
+    <h2><strong>Blog</strong></h2>
+    <h5>escrevendo por ai</h5>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-4">
+        <img  class="image" src="imgs/petrobras.png">
+        <h2>Tantam</h2>
+        <h5>buu</h5>
+        <button>ok</button>
+      </div>
+      <div class="col-4">
+        <img class="image1" src="imgs/youtubelogo.png">
+        <h2>Tantam</h2>
+        <h5>buu</h5>
+        <button>ok</button>
+      </div>
+      <div class="col-4">
+        <img class="image2" src="imgs/farmacia.png">
+        <h2>Tantam</h2>
+        <h5>buu</h5>
+        <button>ok</button>
+
+      </div>
+    </div>
+
+
+  </div>
+
+</section>
+
+<section id="formulario">
+ <div class="container">
+  <div class="row">
+  <div class="col-8">
+    <h2>Formas de Contato</h2>
+    <h5>insira as informações abaixo</h5>
+   <form>
+    <div class="form-group">
+    <label for="exampleInputEmail1">Digite Seu Nome</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Insira seu Nome">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Digite seu email</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite Aqui">
+    <small id="emailHelp" class="form-text text-muted">Nos nunca compartilharemos seu email com ninguem</small>
+    </div>
+    <div class="form-group">
+    <label for="exampleInputEmail1">Mensagem</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+
+  </div>
+<button>Enviar</button>
+
+  </div>
+   </form>
+   <div class="col-4">
+     <h5><img class="telefone" src="imgs/telefone.png">(83)99999999</h5> 
+     <h5><img class="email" src="imgs/email.png">thiago@hotmail.com</h5>
+     <h5><img class="insta" src="imgs/insta.png">@thiiago20</h5>
+   </div>
+   
+ </div>
+ </div>
+  
+
+
+</section>
+
 
 	<h3>Baixa aqui seu livro</h3>
 
