--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title> Minha Pagina Chimpanze</title>
+	<title> Grendene Calçados</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -15,7 +15,7 @@
 	<!-- Navegador -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">
-    <img class="logotipo" src="imgs/logo.jpg" alt="">
+    <img class="logotipo" src="imgs/grendene.png" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -24,29 +24,23 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
+        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Informações
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
+          <a class="dropdown-item" href="#">Produtos</a>
+          <a class="dropdown-item" href="#">Loja</a>
+                </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link" href="#">Sobre</a>
       </li>
+        </div>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <input class="form-control mr-sm-2" type="search" placeholder="Pesquisa" aria-label="Pesquisa">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
     </form>
   </div>
 </nav>
@@ -56,13 +50,13 @@
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="imgs/dbz_fighter_main.png" alt="First slide">
+      <img class="d-block w-100" src="imgs/nike01.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="imgs/images.jpg" alt="Second slide">
+      <img class="d-block w-100" src="imgs/nike02.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="imgs/Sandales-bois.jpg" alt="Third slide">
+      <img class="d-block w-100" src="imgs/nike03.jpg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -77,16 +71,6 @@
 
 <div> </div> <!-- para delimitar uma area -->
 
-
-<section id="social">
-	<h2 class="titulo-section">Sigam-me os Bons</h2>
-  <h5>Postamos novidades nas nossas redes sociais</h5>
-	<a href="link" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
-	<a href="link" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-	<a href="link" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-	
-</section> <!-- social -->
-
 <section id="institucional">
   <div class="container">
    <div class="row">
@@ -94,15 +78,10 @@
     <div class="esq col">
       <h2><strong>Quem Somos?</strong></h2>
       <h3>O que Fazemos</h3>
-      <hr><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <hr><p>Grendene Calçados, Inc. é uma empresa Brasileira de calçados, fundada em 2018 por Thiago de Carvalho e Lindenberg gouveia (atual presidente da empresa). A sua sede fica em João Pessoa, no estado da Paraíba, no Brasil. É uma Revendedora de Calçados mais procurada de João Pessoa.</p>
     </div>
     <div class="dir col">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/NnP5U6-tPrI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/1pHdRUJtH4A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     </div>
   </div>
@@ -111,63 +90,28 @@
 
 <section id="atv1">
   <div class="titulo">
-   <h2><strong>Um Texto Por ai</strong></h2>
-   <h5>outro texto</h5>
+   <h2><strong>Conheça Nossos Produtos</strong></h2>
   </div>
   <div class="container">
+    <br><br>
     <div class="row">
       <div class="col">
-        <a href="link" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
-        <h2>bebo cafe</h2>
-        <h5>uu</h5>
+        <img class="sapato01" src="imgs/venda01.jpg">
+        <strong><h2>R$ 99.99 </h2></strong>
+        <button>Comprar</button>
 
       </div>
       <div class="col">
-        <a href="link" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-        <h2>bebo cafe</h2>
-        <h5>uu</h5>
+        <img class="sapato02" src="imgs/venda02.jpg">
+        <strong><h2>R$ 59.99 </h2></strong>
+        <BUTTON>Comprar</BUTTON>
       </div>
       <div class="col">
-          <a href="link" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-           <h2>bebo cafe</h2>
-          <h5>uu</h5>
+          <img class="sapato03" src="imgs/venda03.jpg">
+           <strong><h2>R$ 199.90 </h2></strong>
+          <button>Comprar</button>
       </div>
     </div>
-  </div>
-  
-
-</section>
-
-<section id="blog">
-  <div class="titulo2">
-    <h2><strong>Blog</strong></h2>
-    <h5>escrevendo por ai</h5>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-4">
-        <img  class="image" src="imgs/petrobras.png">
-        <h2>Tantam</h2>
-        <h5>buu</h5>
-        <button>ok</button>
-      </div>
-      <div class="col-4">
-        <img class="image1" src="imgs/youtubelogo.png">
-        <h2>Tantam</h2>
-        <h5>buu</h5>
-        <button>ok</button>
-      </div>
-      <div class="col-4">
-        <img class="image2" src="imgs/farmacia.png">
-        <h2>Tantam</h2>
-        <h5>buu</h5>
-        <button>ok</button>
-
-      </div>
-    </div>
-
-
   </div>
 
 </section>
@@ -201,6 +145,7 @@
      <h5><img class="telefone" src="imgs/telefone.png">(83)99999999</h5> 
      <h5><img class="email" src="imgs/email.png">thiago@hotmail.com</h5>
      <h5><img class="insta" src="imgs/insta.png">@thiiago20</h5>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3959.0734127594324!2d-34.875705685225874!3d-7.11749129486026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ace7e4ad474b33%3A0xf369438c4f027a27!2sFaculdade+Internacional+da+Para%C3%ADba!5e0!3m2!1spt-BR!2sbr!4v1525356192328" width="400" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
    </div>
    
  </div>
@@ -209,11 +154,6 @@
 
 
 </section>
-
-
-	<h3>Baixa aqui seu livro</h3>
-
-	<button>ok</button>
 
 
 	<!-- Scripts... nao mexa, chupinga -->
